--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,17 @@
             font-size:50px;
             color: gold;
          }
+
+         iframe[src*="//www.youtube.com/"] {
+            position: absolute;
+            margin-left: auto;
+            margin-right: auto;
+            left: 0;
+            right: 0;
+            text-align: center;
+            bottom: 0;
+            border: 2px solid red;
+         }
       </style>
    </head>
    <body>
@@ -43,6 +54,7 @@
          <a href="https://cloud.google.com/blog/products/api-management/apigee-best-practices-for-contact-center-ai" target="_blank">
             <span class="material-symbols-outlined">info</span>
          </a>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/tiYvn5Gneug?autoplay=1&mute=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <script src="https://www.gstatic.com/dialogflow-console/fast/messenger-cx/bootstrap.js?v=1"></script>
       <df-messenger
