--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,13 @@
 <html>
    <head>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-GXWLYTDQPS"></script>
+      <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+
+         gtag('config', 'G-GXWLYTDQPS');
+      </script>
       <style>
          html, body {
          margin: 0;
